syntax = "proto2";

package npb;

enum TypeEnum {
  Unknown_t = 0;
  // POD
  Double_t = 1;
  Float_t = 2;
  Int32_t = 3;
  Int64_t = 4;
  UInt32_t = 5;
  UInt64_t = 6;
  Bool_t = 7;
  // Strings
  Bytes_t = 8;
  String_t = 9;
  // Vectors
  Vector2d_t = 20;
  Vector2f_t = 21;
  Vector2i_t = 22;
  Vector2c_t = 23;
  Vector3d_t = 24;
  Vector3f_t = 25;
  Vector3i_t = 26;
  Vector3c_t = 27;
  Vector4d_t = 28;
  Vector4f_t = 29;
  Vector4i_t = 30;
  Vector4c_t = 31;
  Vector6d_t = 32;
  Vector6f_t = 33;
  Vector6i_t = 34;
  Vector6c_t = 35;
  Vector12d_t = 36;
  Vector12f_t = 37;
  Vector12i_t = 38;
  Vector12c_t = 39;
  Vector16d_t = 40;
  Vector16f_t = 41;
  Vector16i_t = 42;
  Vector16c_t = 43;
  Vector32d_t = 44;
  Vector32f_t = 45;
  Vector32i_t = 46;
  Vector32c_t = 47;
  Vector64d_t = 48;
  Vector64f_t = 49;
  Vector64i_t = 50;
  Vector64c_t = 51;
}